add svg icons to new subfolder

--- a/metager/resources/less/metager/pages/help.less
+++ b/metager/resources/less/metager/pages/help.less
@@ -192,7 +192,7 @@ background-position: 35% 20%;
 
 }
 #help-topic-settings {
-    background-image: url("/img/icon-settings-grau.svg");
+    background-image: url("/img/svg-icons/icon-settings-grau.svg");
     background-size: 100px;
     background-repeat: no-repeat;
     background-position: top -50px left -21px;
@@ -207,14 +207,14 @@ background-position: 35% 20%;
     
 }
  #help-topic-bangs {
-    background-image: url("/img/bangs-icon-help.svg");
+    background-image: url("/img/svg-icons/bangs-icon-help.svg");
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: 55% 35%;
         
 }
 #help-topic-key {
-    background-image: url("/img/key-icon-help.svg");
+    background-image: url("/img/svg-icons/key-icon-help.svg");
     background-size: 60px;
     background-repeat: no-repeat;
     background-position: 60% 20%;
@@ -228,7 +228,7 @@ background-position: 35% 20%;
         
 }
 #help-topic-app {
-    background-image: url("/img/app-grau.svg");
+    background-image: url("/img/svg-icons/app-grey.svg");
     background-size: 50px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
@@ -240,13 +240,13 @@ background-position: 35% 20%;
     background-position: 50% 20%;
 }
 #help-topic-tracking {
-    background-image: url("/img/cookies.svg");
+    background-image: url("/img/svg-icons/cookies.svg");
     background-size: 50px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
 }
 #help-topic-content {
-    background-image: url("/img/jugendschutz.svg");
+    background-image: url("/img/svg-icons/jugendschutz.svg");
     background-size: 50px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
