add icons to subfolder

--- a/metager/resources/less/metager/pages/help.less
+++ b/metager/resources/less/metager/pages/help.less
@@ -173,19 +173,19 @@
 }
 
 #help-topic-mainpage {
-    background-image: url("/img/startseite-icon-help.svg");
+    background-image: url("/img/startpage-icon-help.svg");
     background-size: 130px;
     background-repeat: no-repeat;
     background-position: 35% 35%;
 }
 #help-topic-searchfield {
-    background-image: url("/img/searchfield-icon-help.svg");
+    background-image: url("/img/svg-icons/searchfield-icon-help.svg");
     background-size: 130px;
     background-repeat: no-repeat;
     background-position: 35% 25%;
 }
 #help-topic-result {
-background-image: url("/img/result-icon-help.svg");
+background-image: url("/img/svg-icons/result-icon-help.svg");
 background-size: 130px;
 background-repeat: no-repeat;
 background-position: 35% 20%;
@@ -200,7 +200,7 @@ background-position: 35% 20%;
 
 
 #help-topic-searchfunctions {
-    background-image: url("/img/lupe-grau.svg");
+    background-image: url("/img/svg-icons/mfg-glass-grey.svg");
     background-size: 45px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
@@ -221,7 +221,7 @@ background-position: 35% 20%;
         
 }
 #help-topic-addmetager {
-    background-image: url("/img/plug-in.svg");
+    background-image: url("/img/svg-icons/plug-in.svg");
     background-size: 55px;
     background-repeat: no-repeat;
     background-position: 80% 25%;
@@ -234,7 +234,7 @@ background-position: 35% 20%;
     background-position: 50% 20%;
 }
 #help-topic-maps {
-    background-image: url("/img/maps-grau.svg");
+    background-image: url("/img/svg-icons/maps-grey.svg");
     background-size: 50px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
@@ -264,7 +264,7 @@ background-position: 35% 20%;
     background-position: 50% 20%;      
 }
 #help-topic-tor {
-    background-image: url("/img/tor-icon.svg");
+    background-image: url("/img/svg-icons/tor-icon.svg");
     background-size: 90px;
     background-repeat: no-repeat;
     background-position: 50% 25%;      
