--- a/metager/resources/less/metager/pages/resultpage.less
+++ b/metager/resources/less/metager/pages/resultpage.less
@@ -3,3 +3,4 @@
 @import "./resultpage/quicktips.less";
 @import "./resultpage/product.less";
 @import "./resultpage/result-saver.less";
+@import "./resultpage/skiplinks.less";
