--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -13,7 +13,7 @@
   @supports not (selector(:first-child)) {
     gap: 0;
 
-    >*:not(:nth-child(1)) {
+    > *:not(:nth-child(1)) {
       padding: 0.125rem 0;
     }
   }
@@ -48,15 +48,12 @@
         }
 
         a {
-
           &,
           &:hover,
           &:visited {
             color: @text-color;
             text-decoration: none;
           }
-
-
         }
       }
 
@@ -67,7 +64,7 @@
         color: #808080;
         white-space: nowrap;
 
-        >ul {
+        > ul {
           list-style-type: none;
           padding-left: 20px;
           position: absolute;
@@ -86,8 +83,8 @@
           }
         }
 
-        &:focus>ul,
-        &:focus-within>ul {
+        &:focus > ul,
+        &:focus-within > ul {
           display: block;
         }
       }
@@ -103,7 +100,7 @@
       @supports not (selector(:first-child)) {
         gap: 0;
 
-        >*:not(:nth-child(1)) {
+        > *:not(:nth-child(1)) {
           padding: 0 4px;
         }
       }
@@ -180,7 +177,7 @@
       }
     }
 
-    >.result-deep-buttons {
+    > .result-deep-buttons {
       display: flex;
       overflow-x: auto;
       gap: 1.5rem;
@@ -188,7 +185,7 @@
       @supports not (selector(:first-child)) {
         gap: 0;
 
-        >*:not(:nth-child(1)) {
+        > *:not(:nth-child(1)) {
           padding: 0 0.75rem;
         }
       }
@@ -198,12 +195,12 @@
       margin-bottom: -0.25rem;
       font-size: 0.8rem;
 
-      >li {
+      > li {
         &:nth-child(1) {
           list-style-type: none;
         }
 
-        >a {
+        > a {
           white-space: nowrap;
           display: block;
           padding-bottom: 0.5rem;
@@ -221,7 +218,7 @@
     @supports not (selector(:first-child)) {
       gap: 0;
 
-      >*:not(:nth-child(1)) {
+      > *:not(:nth-child(1)) {
         padding: 0.25rem 0;
       }
     }
@@ -259,7 +256,7 @@
         grid-template-rows: repeat(3, auto);
         grid-template-areas: "description image" "footer footer" "options options";
 
-        >.result-image img {
+        > .result-image img {
           max-width: 120px;
         }
       }
@@ -268,10 +265,10 @@
     .result-image {
       max-width: 160px;
 
-      >a {
+      > a {
         display: block;
 
-        >img {
+        > img {
           display: block;
           max-width: 160px;
           max-height: 100px;
@@ -316,18 +313,10 @@
       position: absolute;
       left: -300%;
 
-      &:checked+.result-footer>.open-result-options {
-        display: none;
-      }
-
-      &:checked+.result-footer>.close-result-options {
-        display: flex;
-      }
-
-      &:checked+.result-footer+.result-options {
+      &:checked ~ .result-options {
         display: block;
 
-        >.options {
+        > .options {
           max-height: 150px;
           overflow: initial;
           overflow-x: auto;
@@ -335,6 +324,16 @@
           display: block;
         }
       }
+      &:focus + .result-options-label {
+        display: block;
+      }
+    }
+
+    .result-options-label {
+      display: none;
+      width: max-content;
+      margin: 0 auto;
+      outline: 1px auto;
     }
 
     .result-footer * {
@@ -342,7 +341,6 @@
     }
 
     &.ad .ad-hoster {
-
       &,
       & a,
       & a:active,
@@ -354,18 +352,18 @@
       }
     }
 
-    &>.remover {
+    & > .remover {
       cursor: pointer;
       text-align: right;
       color: #777;
     }
 
-    &>.result-options {
+    & > .result-options {
       display: none;
       max-width: 100%;
       overflow-x: auto;
 
-      &>.options {
+      & > .options {
         width: 100%;
         text-align: right;
         overflow: hidden;
@@ -384,7 +382,7 @@
         @supports not (selector(:first-child)) {
           gap: 0;
 
-          >*:not(:nth-child(1)) {
+          > *:not(:nth-child(1)) {
             padding: 0 0.5rem 0;
           }
         }
@@ -400,7 +398,7 @@
           }
         }
 
-        li>a {
+        li > a {
           color: @link-color;
           white-space: nowrap;
         }
@@ -408,7 +406,7 @@
     }
   }
 
-  >.result-inherited-results {
+  > .result-inherited-results {
     display: flex;
     flex-wrap: wrap;
     font-size: 0.9rem;
@@ -416,7 +414,7 @@
     padding: 0 1rem 0 1rem;
 
     @media (min-width: 500px) {
-      >.inherited-result {
+      > .inherited-result {
         max-width: calc(50% - 0.5rem);
       }
     }
@@ -431,7 +429,7 @@
     @supports not (selector(:first-child)) {
       gap: 0;
 
-      >*:not(:nth-child(1)) {
+      > *:not(:nth-child(1)) {
         padding: 0 0.5rem;
       }
     }
@@ -442,7 +440,6 @@
     .result-open,
     .result-open-newtab,
     .result-open-key {
-
       &,
       &:active,
       &:hover,
@@ -455,7 +452,6 @@
     }
 
     .result-open-proxy {
-
       &,
       &:active,
       &:hover,
@@ -474,8 +470,7 @@
       }
     }
 
-    .open-result-options,
-    .close-result-options {
+    .toggle-result-options {
       font-weight: normal;
       font-size: 0.7em;
       text-align: right;
@@ -483,7 +478,7 @@
       height: 12px;
       display: flex;
 
-      >img {
+      > img {
         filter: invert(1) brightness(0.7);
       }
     }
