--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -10,13 +10,20 @@
 @additions-width-min: 500px;
 @additions-width-max: 500px;
 // Breakpoints for the 2 resultpage columns
-@resultpage-breakpoint-max: (@results-width-max + @additions-width-max + @padding-small-default * 2 + @padding-small-default * 4 + 6);
-@resultpage-breakpoint-min: (@results-width-min + @additions-width-min + @padding-small-default * 4);
+@resultpage-breakpoint-max: (
+  @results-width-max + @additions-width-max + @padding-small-default * 2 +
+    @padding-small-default * 4 + 6
+);
+@resultpage-breakpoint-min: (
+  @results-width-min + @additions-width-min + @padding-small-default * 4
+);
 @product-shop-color: green;
 // The point upon which a .screen-large logo is displayed
 @logo-size-breakpoint: (@results-width-min + @padding-small-default * 2);
 // The point upon which the sidebar opener switches place
-@sidebar-opener-breakpoint: (@results-width-max + @padding-small-default * 2 + 60px);
+@sidebar-opener-breakpoint: (
+  @results-width-max + @padding-small-default * 2 + 60px
+);
 // Quicktip background color
 @quicktip-background-color: @resultpage-background-color;
 // Color of the Spruch author
@@ -36,7 +43,7 @@
     font-size: 1.5em;
     display: inline-block;
 
-    >img {
+    > img {
       width: 100px;
     }
   }
@@ -98,8 +105,8 @@ body {
   }
 }
 
-.lSPrev>span,
-.lSNext>span {
+.lSPrev > span,
+.lSNext > span {
   color: @metager-orange;
 }
 
@@ -108,7 +115,7 @@ body {
   display: flex;
 }
 
-.nav-tabs>li>a {
+.nav-tabs > li > a {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
@@ -179,7 +186,6 @@ nav .input-group {
 
 a {
   &#donation {
-
     &,
     &:visited {
       color: inherit;
@@ -199,10 +205,10 @@ a {
     color: @spruch-author-color;
   }
 
-  &>p {
+  & > p {
     margin-bottom: 0;
 
-    &+p {
+    & + p {
       margin-top: 4px;
     }
   }
@@ -212,7 +218,7 @@ a {
   display: flex;
   padding-bottom: 15px;
 
-  &>input {
+  & > input {
     min-width: 35%;
     max-width: 80%;
   }
@@ -295,8 +301,8 @@ a {
         grid-template-columns: 100%;
       }
 
-      >.image-container {
-        >.images {
+      > .image-container {
+        > .images {
           display: grid;
           grid-template-columns: repeat(6, 1fr);
 
@@ -323,20 +329,20 @@ a {
           grid-template-rows: masonry;
           gap: 1rem;
 
-          >.image {
+          > .image {
             overflow: hidden;
             border-radius: 10px 10px 0 0;
             margin: 0;
             background-color: @highlight-color;
             cursor: pointer;
 
-            >div {
+            > div {
               &.image {
                 display: flex;
                 justify-content: center;
                 height: 100%;
 
-                >img {
+                > img {
                   width: 100%;
                   height: 100%;
                   min-height: 100px;
@@ -361,28 +367,28 @@ a {
         }
       }
 
-      >.image-details {
+      > .image-details {
         @media (max-width: @full-screen-details-breakpoint) {
           overflow: hidden;
           z-index: 27;
         }
 
-        >input,
-        >.details {
+        > input,
+        > .details {
           display: none;
         }
 
         @media (min-width: (@full-screen-details-breakpoint + 1)) {
-          >input:not(:checked)~.default {
+          > input:not(:checked) ~ .default {
             display: block;
           }
 
-          >input:checked~.default {
+          > input:checked ~ .default {
             display: none;
           }
         }
 
-        >input:checked+.details {
+        > input:checked + .details {
           display: block;
 
           @media (max-width: @full-screen-details-breakpoint) {
@@ -393,7 +399,7 @@ a {
           }
         }
 
-        >.details {
+        > .details {
           width: 100%;
           position: sticky;
           top: 5rem;
@@ -415,38 +421,38 @@ a {
             max-height: none;
           }
 
-          >div.image-container {
+          > div.image-container {
             display: grid;
             place-items: center;
 
-            >img {
+            > img {
               max-width: 100%;
               max-height: 100%;
             }
           }
 
-          >.details {
+          > .details {
             padding: 1rem;
 
             @media (max-width: @full-screen-details-breakpoint) {
               padding: 0 1rem;
             }
 
-            >h3 {
+            > h3 {
               line-height: 1.1;
               margin: 0;
             }
 
-            >.actions {
+            > .actions {
               display: flex;
               justify-content: space-between;
               padding: 0.5rem 0;
 
-              >a.btn {
+              > a.btn {
                 height: max-content;
               }
 
-              >.result-hoster {
+              > .result-hoster {
                 color: inherit;
                 font-size: 0.8rem;
 
@@ -454,7 +460,7 @@ a {
                   border: 1px solid @background-color;
                 }
 
-                >ul {
+                > ul {
                   top: 1.5rem;
                   list-style-type: none;
                   margin: 0;
@@ -463,11 +469,11 @@ a {
               }
             }
 
-            >.copyright {
+            > .copyright {
               font-size: 0.7rem;
             }
 
-            >button {
+            > button {
               display: none;
               width: 100%;
               margin-top: 1rem;
@@ -480,7 +486,7 @@ a {
         }
       }
 
-      >#external-search {
+      > #external-search {
         width: @results-width-max;
         max-width: 100%;
         margin: 0 auto;
@@ -492,26 +498,26 @@ a {
           grid-column: auto;
         }
 
-        >h3 {
+        > h3 {
           margin: 0;
           line-height: 1;
           font-size: clamp(1.2rem, 6vw, 1.3rem);
         }
 
-        >div.external-links {
+        > div.external-links {
           display: grid;
           grid-template-columns: repeat(3, max-content);
           gap: 0.5rem;
           justify-content: space-between;
           place-items: center;
 
-          >a.btn.btn-primary {
+          > a.btn.btn-primary {
             background-color: inherit;
             border-color: #ff8000;
             color: @text-color;
           }
 
-          >.divider {
+          > .divider {
             display: flex;
             gap: 0.5rem;
 
@@ -521,21 +527,21 @@ a {
             }
           }
 
-          >.spacer {
+          > .spacer {
             grid-column: span 2;
           }
 
-          >.external-engines {
+          > .external-engines {
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 0.5rem;
           }
 
-          >div.input-group {
+          > div.input-group {
             text-align: center;
             position: relative;
 
-            >label {
+            > label {
               font-weight: normal;
               font-size: 0.8rem;
               cursor: pointer;
@@ -545,7 +551,7 @@ a {
           @media (max-width: 600px) {
             grid-template-columns: 1fr;
 
-            >.spacer {
+            > .spacer {
               display: none;
               grid-column: initial;
             }
@@ -553,7 +559,7 @@ a {
         }
       }
 
-      >#engine-footer {
+      > #engine-footer {
         grid-column: span 2;
 
         @media (max-width: @full-screen-details-breakpoint) {
@@ -561,7 +567,7 @@ a {
         }
       }
 
-      >#backtotop {
+      > #backtotop {
         grid-column: span 2;
 
         @media (max-width: @full-screen-details-breakpoint) {
@@ -585,34 +591,34 @@ a {
 }
 
 .nachrichten {
-  #results-container>#results {
-    >.result[data-index]>.result-header {
+  #results-container > #results {
+    > .result[data-index] > .result-header {
       display: flex;
       flex-flow: column-reverse;
       align-items: center;
       row-gap: 0.25rem;
 
-      >.result-subheadline {
+      > .result-subheadline {
         line-height: 1;
 
-        >img.favicon {
+        > img.favicon {
           height: 1em;
           background-color: white;
         }
 
-        >a.result-link {
+        > a.result-link {
           color: fade(@text-color, 70%);
         }
 
-        >span.date,
-        >span.date-string {
+        > span.date,
+        > span.date-string {
           line-height: 0.8;
           color: fade(@text-color, 70%);
           font-size: 0.8em;
         }
       }
 
-      >.result-headline>.result-title>a {
+      > .result-headline > .result-title > a {
         color: @link-color;
       }
     }
@@ -625,7 +631,7 @@ a {
   text-align: center;
   margin-top: 20px;
 
-  &>img {
+  & > img {
     width: 30px;
   }
 }
@@ -635,7 +641,7 @@ a {
   justify-content: center;
   padding: 1rem 0;
 
-  &>div {
+  & > div {
     border: #aaa solid 1px;
     border-radius: 10px;
     padding: 5px;
@@ -683,8 +689,8 @@ a {
   margin-bottom: 10px;
 }
 
-.lSPrev>i,
-.lSNext>i {
+.lSPrev > i,
+.lSNext > i {
   background-color: @color-black;
   padding: 5px;
 }
@@ -754,7 +760,7 @@ a {
     gap: 0.5rem;
     padding-top: 1rem;
 
-    >span[name="top"] {
+    > span[name="top"] {
       display: none;
     }
 
@@ -767,7 +773,7 @@ a {
       @supports not (selector(:first-child)) {
         gap: 0;
 
-        >* {
+        > * {
           padding: 0.6rem 0;
         }
       }
@@ -815,30 +821,30 @@ a {
       flex-wrap: wrap;
       justify-content: space-around;
 
-      >div {
+      > div {
         border-radius: 3px;
 
-        >h3 {
+        > h3 {
           font-size: 0.9rem;
           margin: 0;
           color: fade(@text-color, 70%);
           border-bottom: 1px dotted fade(@metager-orange, 70%);
 
-          >a {
+          > a {
             color: fade(@metager-orange, 70%);
           }
 
           text-align: center;
         }
 
-        >.engines {
+        > .engines {
           display: flex;
           gap: 0.5rem;
           justify-content: center;
           padding: 0.5rem 1rem;
           flex-wrap: wrap;
 
-          >.engine {
+          > .engine {
             color: fade(@text-color, 70%);
             font-size: 0.8rem;
             border-radius: 10px;
@@ -848,7 +854,7 @@ a {
               cursor: copy;
             }
 
-            >a {
+            > a {
               cursor: inherit;
             }
           }
@@ -937,7 +943,6 @@ a {
           border-radius: 5px;
 
           input {
-
             &::-webkit-search-cancel-button,
             &::-webkit-search-decoration {
               appearance: none;
@@ -952,7 +957,7 @@ a {
           border-radius: 5px;
         }
 
-        >* {
+        > * {
           border-radius: 5px;
           min-height: 40px;
 
@@ -985,14 +990,14 @@ a {
       margin: 0;
     }
 
-    &>div {
+    & > div {
       padding-right: 16px;
 
-      &>a {
+      & > a {
         color: @text-color;
       }
 
-      &.active>a {
+      &.active > a {
         border-bottom: 1px solid @text-color;
         color: @text-color;
       }
@@ -1032,7 +1037,7 @@ a {
     display: none;
   }
 
-  input[type="checkbox"]:not(:checked)+.scrollbox {
+  input[type="checkbox"]:not(:checked) + .scrollbox {
     display: none;
   }
 
@@ -1050,7 +1055,7 @@ a {
     gap: 0.5rem;
   }
 
-  input[type="checkbox"]:checked+div.scrollbox {
+  input[type="checkbox"]:checked + div.scrollbox {
     max-height: 200px;
     transform: scaleY(1);
   }
@@ -1060,7 +1065,7 @@ a {
     align-items: center;
     margin-left: -8px;
 
-    >div {
+    > div {
       margin-left: 8px;
     }
 
@@ -1072,7 +1077,7 @@ a {
       flex-grow: 0;
       margin-left: 0px;
 
-      >div {
+      > div {
         margin-left: 8px;
       }
     }
@@ -1140,11 +1145,11 @@ a {
           display: none;
         }
 
-        #custom-date:checked+select {
+        #custom-date:checked + select {
           display: none;
         }
 
-        #custom-date:checked+select+#bing-from-to {
+        #custom-date:checked + select + #bing-from-to {
           display: flex;
         }
       }
@@ -1157,7 +1162,7 @@ a {
 
   #settings {
     text-align: center;
-
+    scroll-margin-top: 80px;
     a {
       display: flex;
       align-items: center;
@@ -1199,18 +1204,18 @@ footer.resultPageFooter {
 }
 
 /* Searchbar Opener */
-#research-bar>.sidebar-opener {
+#research-bar > .sidebar-opener {
   display: none;
   margin-right: 10px;
   margin-left: 20px;
 }
 
 @media (max-width: @sidebar-opener-breakpoint) {
-  #resultpage-container>.sidebar-opener {
+  #resultpage-container > .sidebar-opener {
     display: none;
   }
 
-  #research-bar>.sidebar-opener {
+  #research-bar > .sidebar-opener {
     display: initial;
   }
 }
