--- a/metager/resources/less/metager/pages/resultpage/skiplinks.less
+++ b/metager/resources/less/metager/pages/resultpage/skiplinks.less
@@ -2,4 +2,17 @@
   position: fixed;
   z-index: 9;
   background-color: inherit;
+  display: grid;
+  padding: 1rem;
+  gap: 0.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.1);
+  border: 1px solid #efefef;
+  top: -100%;
+  transition: top 0.5s ease-in-out;
+  &:focus-within {
+    top: 0;
+  }
 }
