--- a/metager/resources/less/metager/parts/sidebar.less
+++ b/metager/resources/less/metager/parts/sidebar.less
@@ -294,6 +294,11 @@
 #sidebarToggle {
   position: absolute;
   right: 300%;
+  &:focus {
+    & ~ #sidebarToggle-label {
+      top: 8px;
+    }
+  }
 }
 
 .sidebar-opener.close {
@@ -314,6 +319,17 @@
   & ~ .sidebar-opener.close {
     display: initial;
   }
+}
+#sidebarToggle-label {
+  position: fixed;
+  top: -100%;
+  transition: top 0.5s ease-in-out;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0.5rem;
+  outline: 1px auto;
+  z-index: 9;
+  background-color: inherit;
 }
 
 #sidebar-img-app {
