--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -13,7 +13,7 @@
   @supports not (selector(:first-child)) {
     gap: 0;
 
-    > *:not(:nth-child(1)) {
+    >*:not(:nth-child(1)) {
       padding: 0.125rem 0;
     }
   }
@@ -48,6 +48,7 @@
         }
 
         a {
+
           &,
           &:hover,
           &:visited {
@@ -61,10 +62,10 @@
         cursor: pointer;
         font-size: 0.9em;
         margin-left: 20px;
-        color: #808080;
+        color: rgba(230, 230, 230, 0.6);
         white-space: nowrap;
 
-        > ul {
+        >ul {
           list-style-type: none;
           padding-left: 20px;
           position: absolute;
@@ -83,8 +84,8 @@
           }
         }
 
-        &:focus > ul,
-        &:focus-within > ul {
+        &:focus>ul,
+        &:focus-within>ul {
           display: block;
         }
       }
@@ -100,7 +101,7 @@
       @supports not (selector(:first-child)) {
         gap: 0;
 
-        > *:not(:nth-child(1)) {
+        >*:not(:nth-child(1)) {
           padding: 0 4px;
         }
       }
@@ -177,7 +178,7 @@
       }
     }
 
-    > .result-deep-buttons {
+    >.result-deep-buttons {
       display: flex;
       overflow-x: auto;
       gap: 1.5rem;
@@ -185,7 +186,7 @@
       @supports not (selector(:first-child)) {
         gap: 0;
 
-        > *:not(:nth-child(1)) {
+        >*:not(:nth-child(1)) {
           padding: 0 0.75rem;
         }
       }
@@ -195,12 +196,12 @@
       margin-bottom: -0.25rem;
       font-size: 0.8rem;
 
-      > li {
+      >li {
         &:nth-child(1) {
           list-style-type: none;
         }
 
-        > a {
+        >a {
           white-space: nowrap;
           display: block;
           padding-bottom: 0.5rem;
@@ -218,7 +219,7 @@
     @supports not (selector(:first-child)) {
       gap: 0;
 
-      > *:not(:nth-child(1)) {
+      >*:not(:nth-child(1)) {
         padding: 0.25rem 0;
       }
     }
@@ -256,7 +257,7 @@
         grid-template-rows: repeat(3, auto);
         grid-template-areas: "description image" "footer footer" "options options";
 
-        > .result-image img {
+        >.result-image img {
           max-width: 120px;
         }
       }
@@ -265,10 +266,10 @@
     .result-image {
       max-width: 160px;
 
-      > a {
+      >a {
         display: block;
 
-        > img {
+        >img {
           display: block;
           max-width: 160px;
           max-height: 100px;
@@ -313,10 +314,10 @@
       position: absolute;
       left: -300%;
 
-      &:checked ~ .result-options {
+      &:checked~.result-options {
         display: block;
 
-        > .options {
+        >.options {
           max-height: 150px;
           overflow: initial;
           overflow-x: auto;
@@ -324,7 +325,8 @@
           display: block;
         }
       }
-      &:focus + .result-options-label {
+
+      &:focus+.result-options-label {
         display: block;
       }
     }
@@ -341,6 +343,7 @@
     }
 
     &.ad .ad-hoster {
+
       &,
       & a,
       & a:active,
@@ -352,18 +355,18 @@
       }
     }
 
-    & > .remover {
+    &>.remover {
       cursor: pointer;
       text-align: right;
       color: #777;
     }
 
-    & > .result-options {
+    &>.result-options {
       display: none;
       max-width: 100%;
       overflow-x: auto;
 
-      & > .options {
+      &>.options {
         width: 100%;
         text-align: right;
         overflow: hidden;
@@ -382,7 +385,7 @@
         @supports not (selector(:first-child)) {
           gap: 0;
 
-          > *:not(:nth-child(1)) {
+          >*:not(:nth-child(1)) {
             padding: 0 0.5rem 0;
           }
         }
@@ -398,7 +401,7 @@
           }
         }
 
-        li > a {
+        li>a {
           color: @link-color;
           white-space: nowrap;
         }
@@ -406,7 +409,7 @@
     }
   }
 
-  > .result-inherited-results {
+  >.result-inherited-results {
     display: flex;
     flex-wrap: wrap;
     font-size: 0.9rem;
@@ -414,7 +417,7 @@
     padding: 0 1rem 0 1rem;
 
     @media (min-width: 500px) {
-      > .inherited-result {
+      >.inherited-result {
         max-width: calc(50% - 0.5rem);
       }
     }
@@ -429,7 +432,7 @@
     @supports not (selector(:first-child)) {
       gap: 0;
 
-      > *:not(:nth-child(1)) {
+      >*:not(:nth-child(1)) {
         padding: 0 0.5rem;
       }
     }
@@ -440,6 +443,7 @@
     .result-open,
     .result-open-newtab,
     .result-open-key {
+
       &,
       &:active,
       &:hover,
@@ -452,6 +456,7 @@
     }
 
     .result-open-proxy {
+
       &,
       &:active,
       &:hover,
@@ -478,7 +483,7 @@
       height: 12px;
       display: flex;
 
-      > img {
+      >img {
         filter: invert(1) brightness(0.7);
       }
     }
