--- a/metager/resources/less/metager/pages/resultpage/skiplinks.less
+++ b/metager/resources/less/metager/pages/resultpage/skiplinks.less
@@ -1,7 +1,7 @@
 .skiplinks {
   position: fixed;
   z-index: 9;
-  background-color: inherit;
+  background-color: @background-color;
   display: grid;
   padding: 1rem;
   gap: 0.5rem;
