--- a/metager/resources/less/metager/pages/help.less
+++ b/metager/resources/less/metager/pages/help.less
@@ -34,14 +34,17 @@
         color: @text-color;
         text-decoration: none;
     }
+
     #help-easy-language-button:hover {
-        border-color:#f47216;
+        border-color: #f47216;
     }
+
     #easy-language-image-back {
-        width:9px;
+        width: 9px;
         margin-right: 5px;
         margin-bottom: 6px;
     }
+
     #help-easy-language-button-back {
         padding: 5px 5px;
         border-color: #5b5b5b8f;
@@ -50,12 +53,13 @@
         border-radius: 5px;
         width: 5em;
         font-size: medium;
-        color: @text-color;    
+        color: @text-color;
     }
 
     #help-easy-language-button-back:hover {
-        border-color:#f47216;
+        border-color: #f47216;
     }
+
     .fake-result {
         *:hover {
             overflow: visible !important;
@@ -77,19 +81,24 @@
         }
     }
 }
-@media(max-width: @screen-lg-min){
-    .back-button, .up-button {
+
+@media(max-width: @screen-lg-min) {
+
+    .back-button,
+    .up-button {
         visibility: hidden;
     }
 }
-.back-button, .back-button:visited {
+
+.back-button,
+.back-button:visited {
     font-size: medium;
     color: @text-color;
     display: block;
     top: 5px;
     background-color: @background-color;
     padding: 5px;
-    width: 4.9em;
+    width: 5.5em;
     border-color: #5b5b5b8f;
     border-width: 2px;
     border-style: solid;
@@ -97,12 +106,13 @@
     margin-left: -80px;
     text-decoration: none;
 }
+
 .back-button .back-arrow {
-    width:10px ;
-    padding-bottom: 3px;
+    width: 10px;
 }
 
-.up-button, .up-button:visited {
+.up-button,
+.up-button:visited {
     font-size: medium;
     color: @text-color;
     display: block;
@@ -118,58 +128,65 @@
     margin-left: -80px;
     text-decoration: none;
 }
+
 .up-button .up-arrow {
-    width:12px ;
+    width: 12px;
     padding-bottom: 3px;
     margin-right: 0.5em;
 }
 
-#navigationsticky{
+#navigationsticky {
     position: sticky;
     display: block;
-    top:5px;
+    top: 5px;
 }
+
 #easy-language-image {
-    width:20px;
+    width: 20px;
     margin-right: 5px;
 }
+
 .help-topic-row {
     display: flex;
-    gap:1rem;
+    gap: 1rem;
     justify-content: flex-start;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
 }
-.back-arrow{
-    margin-right: 0.25em;
+
+.back-arrow {
+    margin-right: 0.5em;
     margin-bottom: 0.2em;
 }
-.help-topic, .help-topic:visited {
-        width:20vw;
-        max-width: 220px;
-        min-width: 160px;
-        height: 100px;
-        display: block;
-        border: solid #5b5b5b8f 2px;
-        border-radius: 5px;
-        position: relative;
-        color: @text-color;
-        flex-shrink: 0;
-        background-color: @card-background-color;
-} 
+
+.help-topic,
+.help-topic:visited {
+    width: 20vw;
+    max-width: 220px;
+    min-width: 160px;
+    height: 100px;
+    display: block;
+    border: solid #5b5b5b8f 2px;
+    border-radius: 5px;
+    position: relative;
+    color: @text-color;
+    flex-shrink: 0;
+    background-color: @card-background-color;
+}
 
 .help-topic:hover {
-    color:@text-color;
+    color: @text-color;
 }
 
-.help-topic > p {
-        bottom: 0px;
-        position: absolute;
-        padding: 10px;
-        font-weight: bold;
-        padding-bottom: 0px;
+.help-topic>p {
+    bottom: 0px;
+    position: absolute;
+    padding: 10px;
+    font-weight: bold;
+    padding-bottom: 0px;
 }
-.help-topic:hover{
-    border-color:#f47216 ;
+
+.help-topic:hover {
+    border-color: #f47216;
 }
 
 #help-topic-mainpage {
@@ -178,19 +195,22 @@
     background-repeat: no-repeat;
     background-position: 35% 35%;
 }
+
 #help-topic-searchfield {
     background-image: url("/img/svg-icons/searchfield-icon-help.svg");
     background-size: 130px;
     background-repeat: no-repeat;
     background-position: 35% 25%;
 }
+
 #help-topic-result {
-background-image: url("/img/svg-icons/result-icon-help.svg");
-background-size: 130px;
-background-repeat: no-repeat;
-background-position: 35% 20%;
+    background-image: url("/img/svg-icons/result-icon-help.svg");
+    background-size: 130px;
+    background-repeat: no-repeat;
+    background-position: 35% 20%;
 
 }
+
 #help-topic-settings {
     background-image: url("/img/svg-icons/icon-settings-grau.svg");
     background-size: 100px;
@@ -204,77 +224,90 @@ background-position: 35% 20%;
     background-size: 45px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
-    
+
 }
- #help-topic-bangs {
+
+#help-topic-bangs {
     background-image: url("/img/svg-icons/bangs-icon-help.svg");
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: 55% 35%;
-        
+
 }
+
 #help-topic-key {
     background-image: url("/img/svg-icons/key-icon-help.svg");
     background-size: 60px;
     background-repeat: no-repeat;
     background-position: 60% 20%;
-        
+
 }
+
 #help-topic-addmetager {
     background-image: url("/img/svg-icons/plug-in.svg");
     background-size: 55px;
     background-repeat: no-repeat;
     background-position: 80% 25%;
-        
+
 }
+
 #help-topic-app {
     background-image: url("/img/svg-icons/app-grey.svg");
     background-size: 50px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
 }
+
 #help-topic-maps {
     background-image: url("/img/svg-icons/maps-grey.svg");
     background-size: 50px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
 }
+
 #help-topic-tracking {
     background-image: url("/img/svg-icons/cookies.svg");
     background-size: 50px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
 }
+
 #help-topic-content {
     background-image: url("/img/svg-icons/jugendschutz.svg");
     background-size: 50px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
 }
+
 #help-topic-widget {
     background-image: url("/img/widget.svg");
     background-size: 110px;
     background-repeat: no-repeat;
     background-position: 50% 20%;
 }
+
 #help-topic-proxy {
     background-image: url("/img/proxy.svg");
     background-size: 40px;
     background-repeat: no-repeat;
-    background-position: 50% 20%;      
+    background-position: 50% 20%;
 }
+
 #help-topic-tor {
     background-image: url("/img/svg-icons/tor-icon.svg");
     background-size: 90px;
     background-repeat: no-repeat;
-    background-position: 50% 25%;      
+    background-position: 50% 25%;
 }
+
 .help-ellipsis-image {
     max-height: 23px;
 }
+
 .easy-help-icon {
     max-height: 20px;
 }
+
 .easy-help-icon-button {
     padding-right: 0.3em;
     margin-bottom: 0.2em;
