exchange key images

--- a/metager/resources/less/metager/pages/help-easy-language.less
+++ b/metager/resources/less/metager/pages/help-easy-language.less
@@ -57,6 +57,9 @@
     .help-easy-language-key-image {
         max-height: 270px;
     }
+    .help-easy-language-key {
+        max-height:90px;
+    }
     #help-easy-language-install-metager-image{
         max-height: 200px;
     }
