--- a/metager/resources/less/metager/pages/resultpage/skiplinks.less
+++ b/metager/resources/less/metager/pages/resultpage/skiplinks.less
@@ -10,13 +10,14 @@
   text-align: center;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.1);
   border: 1px solid #efefef;
-  top: -200%;
+  top: -1000px;
   transition: top 0.25s ease-in-out;
 
   &:focus-within {
     top: 0;
   }
-  > .hidden {
+
+  >.hidden {
     display: none;
   }
 }
