add tiles to the startpage replacing the old links

--- a/metager/resources/less/metager/pages/startpage/startpage.less
+++ b/metager/resources/less/metager/pages/startpage/startpage.less
@@ -2,6 +2,7 @@
 @scrollLinkHeight: 40px;
 @scrollLinkHeightMedium: 50px;
 @scrollLinkHeightMax: 70px;
+@import "./tiles.less";
 
 html {
   scroll-behavior: smooth;
@@ -62,7 +63,6 @@ div.startpage {
       }
 
       >div#search-wrapper {
-        flex-grow: 1;
         display: grid;
         grid-template-rows: 20dvh max-content max-content max-content 1fr;
 
