--- a/metager/resources/less/metager/pages/startpage/tiles.less
+++ b/metager/resources/less/metager/pages/startpage/tiles.less
@@ -3,18 +3,48 @@ div#tiles-container {
     flex-grow: 1;
     padding-inline: 1rem;
 
+
     div#tiles {
         flex-grow: 0;
+        width: 100%;
+        @tile_width: 13ch;
+
+        @nine_row_width: calc(calc(9 * @tile_width) + calc(8 * 1rem));
+        @eight_row_width: calc(calc(8 * @tile_width) + calc(7 * 1rem));
+        @seven_row_width: calc(calc(7 * @tile_width) + calc(6 * 1rem));
+        @six_row_width: calc(calc(6 * @tile_width) + calc(5 * 1rem));
+        @five_row_width: calc(calc(5 * @tile_width) + calc(4 * 1rem));
+        @four_row_width: calc(calc(4 * @tile_width) + calc(3 * 1rem));
+        @three_row_width: calc(calc(3 * @tile_width) + calc(2 * 1rem));
+        @two_row_width: calc(calc(2 * @tile_width) + calc(1 * 1rem));
+
+        @media(max-width: @nine_row_width) {
+            width: @seven_row_width;
+        }
+
+        @media(max-width: @eight_row_width) {
+            width: @five_row_width;
+        }
+
+        @media(max-width: @six_row_width) {
+            width: @three_row_width;
+        }
+
+        @media(max-width: @four_row_width) {
+            width: @two_row_width;
+        }
+
         display: flex;
-        align-items: flex-start;
-        padding-top: 5dvh;
         flex-wrap: wrap;
+        justify-content: center;
+
+        padding-top: 8dvh;
         gap: 1rem;
         margin-inline: auto;
         height: max-content;
-        justify-content: space-between;
 
         >a {
+            width: @tile_width;
             display: flex;
             row-gap: .5rem;
             flex-direction: column;
@@ -22,14 +52,18 @@ div#tiles-container {
             justify-content: flex-end;
             color: @text-color;
 
+            &.skeleton {
+                display: none;
+            }
+
             >div.image {
-                @image_size: 4.5rem;
+                @image_size: 5rem;
                 width: @image_size;
                 height: @image_size;
                 padding: 1rem;
                 background-color: @highlight-color;
                 border-radius: 5px;
-                transition: width 0.5s, height 0.5s;
+                transition: background-color 0.5s;
 
                 >img {
                     width: 100%;
@@ -44,8 +78,8 @@ div#tiles-container {
             >div.title {
                 font-size: .8rem;
                 color: fade(@text-color, 40%);
-                transition: color 0.5s, width 0.5s, overflow 0.5s;
-                width: 11ch;
+                transition: color 0.5s;
+                width: @tile_width;
                 text-overflow: ellipsis;
                 overflow: hidden;
                 white-space: nowrap;
@@ -54,14 +88,11 @@ div#tiles-container {
 
             &:hover {
                 >div.image {
-                    width: 6rem;
-                    height: 6rem;
+                    background-color: lighten(@highlight-color, 10%);
                 }
 
                 >div.title {
                     color: @text-color;
-                    width: unset;
-                    overflow: unset;
                 }
             }
         }
