--- a/metager/resources/less/metager/variables-dark.less
+++ b/metager/resources/less/metager/variables-dark.less
@@ -1,5 +1,7 @@
 @import "./variables.less";
 
+@metager-orange: darken(#ff8000, 15%);
+
 // Default Background Color
 @background-color: @color-almost-black;
 @background-color-mobile: @color-almost-black;
