fix padding for older devices

--- a/metager/resources/less/metager/pages/startpage/tiles.less
+++ b/metager/resources/less/metager/pages/startpage/tiles.less
@@ -40,6 +40,8 @@ div#tiles-container {
         flex-wrap: wrap;
         justify-content: center;
 
+        padding-top:8%;
+        padding-top: 8vh;
         padding-top: 8dvh;
         gap: @tile_gap;
         margin-inline: auto;
