fix fallback for older browsers

--- a/metager/resources/less/metager/pages/startpage/tiles.less
+++ b/metager/resources/less/metager/pages/startpage/tiles.less
@@ -40,9 +40,12 @@ div#tiles-container {
         flex-wrap: wrap;
         justify-content: center;
 
-        padding-top:8%;
-        padding-top: 8vh;
-        padding-top: 8dvh;
+        padding-top:8vh;
+
+        @supports(padding-top: 8dvh) {
+            padding-top: 8dvh;
+        }
+
         gap: @tile_gap;
         margin-inline: auto;
         height: max-content;
