create a navbar entry

--- a/metager/resources/less/metager/parts/sidebar.less
+++ b/metager/resources/less/metager/parts/sidebar.less
@@ -362,6 +362,12 @@
   margin-left: 12px;
 }
 
+#sidebar-img-advertising-on-metager {
+  height: 20px;
+  margin-right: 8px;
+  margin-left: 10px;
+}
+
 #sidebar-img-contact {
   height: 13px;
   margin-left: 23px;
