fix layout for keys

--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -1,40 +1,12 @@
 @searchbar-border-color: #585858;
 @searchbar-border-color-light: #777777;
 
-.searchbar.full .search-input-submit #search-key {
-  height:1.25rem;
-  > a {
-      height:100%;
-  }
-}
-.searchbar.full .search-input-submit {
-  padding: 0.7rem 1rem;
-}
-.searchbar.full .search-submit {
-  >button {
-    padding: 0;
-  }
-}
-.searchbar.unauthorized .search-input-submit #search-key {
-  height:1.25rem;
-  > a {
-      height:100%;
-  }
-}
-.searchbar.unauthorized .search-input-submit {
-  padding: 0.7rem 1rem;
-}
-.searchbar.unauthorized .search-submit {
-  >button {
-    padding: 0;
-  }
-}
 
 .searchbar.empty .search-input-submit #search-key {
-  height:2.65rem;
+  height:3rem;
   border-right: transparent;
+  border-radius: 0.3rem 0 0 0.3rem;
   padding: 0,2rem 0.5rem;
-  width: 2.5rem;
   background-color: #cd4708;
   background-size: cover;
   background-position: center;
@@ -51,17 +23,23 @@
 }
 
 
-.searchbar.low .search-input-submit #search-key {
-  height:2.65rem;
-  border: solid #d8b100;
+.searchbar .search-input-submit #search-key {
+  height:3rem;
+  border: 1px solid #585858;
+  border-right: none;
   border-radius: 0.3rem 0 0 0.3rem;
   padding: 0,2rem 0.5rem;
-  width: 2.5rem;
+  width: 3rem;
 
   > a {
-    height:60%;
+    height:50%;
 }
 }
+
+.searchbar.low .search-input-submit #search-key {
+  border: solid #d8b100;
+}
+
 .searchbar.low .search-submit {
   >button {
     padding-right: 0.7rem;
@@ -102,7 +80,7 @@
   border-right: none;
   border-left: none;
   flex-grow: 1;
-  height: 2.65rem;
+  height: 3rem;
   display: flex;
   align-items: center;
   padding-left: 1rem;
@@ -126,19 +104,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      &.full, &.unauthorized {
-        height:1.25rem;
-      }
-      &.empty{
-        height: 2.65rem;
-        border-right: transparent;
-        padding: 0.2rem 0.5rem;
-        width:2.5rem;
-        background-color: #cd4708;
-        background-size: cover;
-        background-position: center;
-      }
-
+      
       @supports not (selector(:first-child)) {
         padding-right: 1rem;
       }
@@ -227,24 +193,18 @@
       border: 1px solid @searchbar-border-color;
       border-left: none;
       border-radius: 0 0.3rem 0.3rem 0;
-      height: 2.65rem;
+      height: 3rem;
       display: flex;
       align-items: center;
 
       button {
-        height: 60%;
+        height: 50%;
         line-height: 100%;
         border: 0;
         background-color: transparent;
         color: #585858;
         filter: invert(@icon-color);
-        &.full, &.unauthorized {
-          padding: 0;
-        }
-        &.empty{
-          padding-right: 0.5rem;
-
-        }
+        padding-right: 1rem;
 
         > img#searchbar-img-lupe {
           height: 100%;
