Add invoice data to account

--- a/metager/resources/less/metager/pages/logs.less
+++ b/metager/resources/less/metager/pages/logs.less
@@ -19,3 +19,26 @@
         }
     }
 }
+
+#overview {
+    >div#invoice-data {
+        display: grid;
+        row-gap: 0.5rem;
+        width: 50%;
+        min-width: 320px;
+
+        >.input-group {
+            display: grid;
+
+            >label {
+                margin: 0;
+                font-weight: normal;
+                font-size: .8rem;
+            }
+        }
+
+        >h3 {
+            margin: 0;
+        }
+    }
+}
