create more models to handle the usecase

--- a/metager/resources/less/metager/pages/logs.less
+++ b/metager/resources/less/metager/pages/logs.less
@@ -88,4 +88,13 @@
         display: block;
         margin-bottom: 0.5rem;
     }
+
+    #cancel-form {
+        margin-top: .5rem;
+
+        >button {
+            color: inherit;
+            cursor: pointer;
+        }
+    }
 }
