creating access_keys is possible now

--- a/metager/resources/less/metager/pages/logs.less
+++ b/metager/resources/less/metager/pages/logs.less
@@ -101,7 +101,25 @@
 }
 
 #orders {
+    margin-bottom: 2rem;
+
     >table {
         width: 100%;
+    }
+}
+
+#api-keys {
+    >table {
+        width: 100%;
+    }
+
+    >form {
+        display: flex;
+        align-items: flex-end;
+
+        >button {
+            height: 1.7rem;
+            line-height: 1;
+        }
     }
 }
